--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "sinon": "^4.1.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.173.0",
     "aws-xray-sdk-core": "^1.1.6",
     "joi": "^12.0.0",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "uuid": "^3.1.0"
   }
 }
